--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -10,6 +10,11 @@ body {
     background-color: #001125;
 }
 
+h4 {
+    color: #fff;
+    cursor: pointer;
+}
+
 .wave {
     position: fixed;
     bottom: 0;
@@ -32,6 +37,7 @@ body {
     justify-content: flex-left;
     align-items: center;
     margin-top: 23%;
+    /* margin-right: 10%; */
 }
 
 .img-ey {
