--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -21,7 +21,7 @@
         </div>
         <!-- INICIO FORMULARIO LOGIN -->
         <div class="login-content">
-            <form action="index.html">
+            <form action="" method="post">
                 <img src="../static/img/undraw_male_avatar_323b.svg">
                 <h2 class="title">Welcome</h2>
                 <div class="input-div one">
@@ -29,8 +29,8 @@
                         <i class="fas fa-user"></i>
                     </div>
                     <div class="div">
-                        <h5>Username</h5>
-                        <input type="text" class="input">
+                        <h5>E-mail</h5>
+                        <input type="text" name="email" class="input">
                     </div>
                 </div>
                 <div class="input-div pass">
@@ -39,10 +39,11 @@
                     </div>
                     <div class="div">
                         <h5>Password</h5>
-                        <input type="password" class="input">
+                        <input type="password" name="password" class="input">
                     </div>
                 </div>
-                <input type="submit" class="btn" value="Login">
+                <input type="submit" class="btn" value="Sign In">
+                <h4 onclick="alert('clicked')">Sign Up</h4>
             </form>
         </div>
         <!-- FIN FORMULARIO LOGIN -->
