Se crearon instrucciones para cuando el usuario no ingresa un dato correcto para el Loggeo y el sistema redirecciona al ser correctos los datos.

--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -1,4 +1,19 @@
-<H1>BIENVENIDOOOOOOOOOOOOOOOOOOOOOOOOOO</H1>
+<H1>
+    BIENVENIDOOOOOOOOOOOOOOOOOOOOOOOOOO</H1>
+{{ token }}
+
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
     localStorage.setItem("token", "{{token}}");
+
+    function validation() {
+        swal.fire({
+            title: "Bienvenido",
+            text: "Yeahhhh!",
+            icon: "success",
+            closeOnConfirm: false
+        });
+    }
+
+    window.onload(validation());
 </script>
