--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -19,7 +19,8 @@
             <img src="../static/img/ey_challenge_logo.svg">
         </div>
         <!-- INICIO FORMULARIO LOGIN -->
-        <div class="login-content">
+
+        <div class="login-content" style="align-items: center;">
             <form action="" method="post">
                 <img src="../static/img/undraw_male_avatar_323b.svg">
                 <h2 class="title">Welcome</h2>
@@ -48,15 +49,20 @@
         </div>
         <!-- FIN FORMULARIO LOGIN -->
 
+
         <div class="img">
             <img src="../static/img/undraw_Code_review_re_woeb.svg">
         </div>
+        {% block homepage %} {% endblock %}
 
     </div>
     <script type="text/javascript" src="../static/js/main.js"></script>
 
+
+
     <!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+    
 
     <script>
         function notificacion() {
