--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -10,11 +10,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+
 </head>
 
 <body>
-    <h1>TEST</h1>
-    {% block content %} {% endblock content %}
+    {% block homepage %} {% endblock %}
+    <script type="text/javascript" src="../static/js/main.js"></script>
 </body>
 
 </html>
