--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -1,8 +1,209 @@
-<H1>
-    BIENVENIDOOOOOOOOOOOOOOOOOOOOOOOOOO</H1>
-{{ token }}
+{% extends 'base.html' %} {% block homepage %}
 
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
+
+<!-- <div class="login-content">
+    <form action="" method="post">
+
+        <h2 class="title">Log Out</h2>
+        <input type="submit" onclick="notificacion()" class="btn" value="Sign In">
+        <h4>Sign Up</h4>
+    </form>
+
+</div> -->
+
+
+
+
+
+<header class="mdc-top-app-bar">
+    <div class="mdc-top-app-bar__row">
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+            <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button" aria-label="face">face</button>
+            <span class="mdc-top-app-bar__title">EY Challenge</span>
+        </section>
+        <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
+            Logout
+            <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="logout">logout</button>
+        </section>
+    </div>
+</header>
+<main class="mdc-top-app-bar--fixed-adjust">
+
+    <div class="container">
+
+
+        <!-- ===========================================================================     -->
+        <!-- FORMULARIO USUARIO / INICIO  -->
+        <!-- ===========================================================================     -->
+        <div class="login-content" style="margin-top: 30px;">
+            {% if editar == False %}
+            <form action="" method="post">
+                <img src="../static/img/undraw_male_avatar_323b.svg">
+                <h2 class="title">User </h2>
+                <div class="input-div one">
+                    <div class="i">
+                        <i class="fa fa-address-book" aria-hidden="true"></i>
+                    </div>
+                    <div class="div">
+                        <h5>First Name </h5>
+                        <input type="text" name="first_name" class="input">
+                    </div>
+                </div>
+                <div class="input-div one">
+                    <div class="i">
+                        <i class="fa fa-id-card" aria-hidden="true"></i>
+                    </div>
+                    <div class="div">
+                        <h5>Last Name</h5>
+                        <input type="text" name="last_name" class="input">
+                    </div>
+                </div>
+                <div class="input-div one">
+                    <div class="i">
+                        <i class="fas fa-user"></i>
+                    </div>
+                    <div class="div">
+                        <h5>E-mail</h5>
+                        <input type="text" name="email" class="input">
+                    </div>
+                </div>
+                <div class="input-div pass">
+                    <div class="i">
+                        <i class="fas fa-lock"></i>
+                    </div>
+                    <div class="div">
+                        <h5>Password</h5>
+                        <input type="password" name="password" class="input">
+                    </div>
+                </div>
+
+                <input type="submit" class="btn" value="New User">
+            </form>
+
+            {% else %}
+
+
+            <form action="/edit" method="POST">
+                <img src="../static/img/undraw_male_avatar_323b.svg">
+                <h2 class="title">Update User {{ editar }} </h2>
+                <div class="input-div one">
+                    <div class="i">
+                        <i class="fa fa-address-book" aria-hidden="true"></i>
+                    </div>
+                    <div class="div">
+                        <h5>First Name </h5>
+                        <input type="text" name="first_name" class="input" value="{{ usuario['first_name'] }}">
+                    </div>
+                </div>
+                <div class="input-div one">
+                    <div class="i">
+                        <i class="fa fa-id-card" aria-hidden="true"></i>
+                    </div>
+                    <div class="div">
+                        <h5>Last Name</h5>
+                        <input type="text" name="last_name" class="input" value="{{ usuario['last_name'] }}">
+                    </div>
+                </div>
+                <div class="input-div one">
+                    <div class="i">
+                        <i class="fas fa-user"></i>
+                    </div>
+                    <div class="div">
+                        <h5>E-mail</h5>
+                        <input type="text" name="email" class="input" value="{{ usuario['email'] }}">
+                    </div>
+                </div>
+                <div class="input-div pass">
+                    <div class="i">
+                        <i class="fas fa-lock"></i>
+                    </div>
+                    <div class="div">
+                        <h5>Password</h5>
+                        <input type="password" name="password" class="input" value="{{ usuario['password'] }}">
+                    </div>
+                </div>
+
+                <!-- <a href="/edit/{{usuario['id']}}/False" class="btn"> -->
+                <input type="submit" class="btn" value="Update User">
+                <!-- </a> -->
+            </form>
+
+            {% endif %}
+
+        </div>
+        <!-- ===========================================================================     -->
+        <!-- FORMULARIO USUARIO / FIN  -->
+        <!-- ===========================================================================     -->
+
+        <!-- ===========================================================================     -->
+        <!-- TABLA USUARIOS / INICIO  -->
+        <!-- ===========================================================================     -->
+
+        <div class="mdc-card">
+            <!-- ... content ... -->
+
+            <div class="mdc-data-table">
+                <div class="mdc-data-table__table-container">
+                    <table class="mdc-data-table__table" aria-label="Table Users">
+                        <thead class="encabezado-tabla">
+                            <tr class="mdc-data-table__header-row">
+                                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Full Name</th>
+                                <th class="mdc-data-table__header-cell mdc-data-table__header-cell--numeric" role="columnheader" scope="col">Email</th>
+                                <th class="mdc-data-table__header-cell" role="columnheader" scope="col">Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody class="mdc-data-table__content">
+
+                            <!-- ===========================================================================     -->
+                            <!-- CICLO FOR / INICIO  -->
+                            <!-- ===========================================================================     -->
+
+                            {% for usuario in usuarios %}
+                            <tr class="mdc-data-table__row">
+                                <th class="mdc-data-table__cell" scope="row"> {{usuario['first_name']}} {{usuario['last_name']}}</th>
+                                <td class="mdc-data-table__cell mdc-data-table__cell--numeric"> {{usuario['email']}}</td>
+
+                                <td class="mdc-data-table__cell">
+                                    <a href="/enable-edit/{{usuario['id']}}/{{usuario['first_name']}}/{{usuario['last_name']}}/{{usuario['email']}}/{{usuario['password']}}/true" class="mdc-button mdc-button--raised boton-users-edit">Edit</a>
+                                </td>
+                                <td class="mdc-data-table__cell">
+                                    <a href="/delete/{{usuario['id']}}/{{usuario['first_name']}}/{{usuario['last_name']}}/{{usuario['email']}}/{{usuario['password']}}" class="mdc-button mdc-button--raised boton-users-remove">delete</a>
+                                </td>
+
+                            </tr>
+
+                            {% endfor %}
+
+                            <!-- ===========================================================================     -->
+                            <!-- CICLO FOR / FIN  -->
+                            <!-- ===========================================================================     -->
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <!-- ===========================================================================     -->
+        <!-- TABLA USUARIOS / FIN  -->
+        <!-- ===========================================================================     -->
+
+
+    </div>
+
+    <!-- CICLO FOR -->
+    <!-- {% for usuario in usuarios %} {{usuario['first_name']}} {% endfor %} -->
+
+
+
+
+</main>
+
+
+
+
+<!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
     localStorage.setItem("token", "{{token}}");
 
@@ -16,4 +217,6 @@
     }
 
     window.onload(validation());
-</script>
+</script> -->
+
+{% endblock %}
