Se agregaron otras opciones al Backend, gender  y country.
 Para generar graficos

 NOTA: Falta agregar las opciones de editar pais

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -15,12 +15,13 @@
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-
+    <script src="../static/js/chart.js-3.4.1/package/dist/chart.js"></script>
 </head>
 
 <body>
     {% block homepage %} {% endblock %}
     <script type="text/javascript" src="../static/js/main.js"></script>
+
 </body>
 
 </html>
