--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -15,6 +15,10 @@ h4 {
     cursor: pointer;
 }
 
+.grafica {
+    width: 500px !important;
+}
+
 .mdc-top-app-bar {
     background-color: #1B98E0 !important;
 }
@@ -22,10 +26,6 @@ h4 {
 .mdc-top-app-bar__title {
     /* color: #001125 !important; */
     font-weight: bold !important;
-}
-
-.mdc-top-app-bar--fixed-adjust {
-    /* align-items: center !important; */
 }
 
 .mdc-card {
